@@ -160,7 +160,7 @@
 <h2>Other related software<a class="headerlink" href="#other-related-software" title="Permalink to this headline">¶</a></h2>
 <div class="section" id="importrpl-digital-micrograph-plugin">
 <span id="import-rpl"></span><h3>ImportRPL Digital Micrograph plugin<a class="headerlink" href="#importrpl-digital-micrograph-plugin" title="Permalink to this headline">¶</a></h3>
-<p>Lastest version release date: 04/11/2011</p>
+<p>Lastest version release date: 24/05/2012. Minor bugs were solved and new features added.</p>
 <p>This Digital Micrograph plugin is designed to import Ripple files into Digital Micrograph. It is used to easy data transit between DigitalMicrograph and Hyperspy without losing the calibration using the extra keywords that Hyperspy adds to the standard format.</p>
 <p>When executed it will ask for 2 files:</p>
 <ol class="arabic simple">
@@ -170,7 +170,7 @@
 <p>If a file with the same name and path as the riple file exits
 with raw or bin extension it is opened directly without prompting</p>
 <p>ImportRPL was written by Luiz Fernando Zagonel.</p>
-<p><a class="reference external" href="http://hyperspy.org/hyperspy-doc/dev/_static/importRPL.s">Download ImportRPL</a></p>
+<p><a class="reference external" href="https://github.com/downloads/hyperspy/ImportRPL/ImportRPL.s">Download ImportRPL</a></p>
 </div>
 </div>
 </div>
