@@ -135,6 +135,7 @@ developed and used in research (see
 <div class="section" id="news">
 <h2>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h2>
 <ul class="simple">
+<li><tt class="docutils literal"><span class="pre">12/06/2012</span></tt> A new version of ImportRPL has been released. See <a class="reference internal" href="download.html#import-rpl"><em>ImportRPL Digital Micrograph plugin</em></a></li>
 <li><tt class="docutils literal"><span class="pre">16/04/2012</span></tt> Hyperspy 0.4.1  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li><tt class="docutils literal"><span class="pre">29/02/2012</span></tt> Hyperspy 0.4  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 </ul>
