@@ -1,1 +1,1 @@
-Search.setIndex({objects:{},terms:{all:[0,7],code:7,uninstal:5,execut:5,show:0,abl:0,hyperspectr:[0,1],move:7,find:[3,7],becaus:1,report:[3,7],calibr:5,through:2,keyword:5,follow:5,yet:[0,7],impact:0,web:[3,7],don:7,group:7,just:1,zone:7,how:0,menu:5,fix:3,activ:0,send:[3,7],should:7,better:1,window:5,bibliographi:0,requir:5,rich:0,under:0,mail:[3,1,2,7],pca:0,analys:1,transit:5,whishlist:7,bin:5,digit:[5,1],evok:1,everi:7,contribut:0,thei:7,get:5,python:[5,0,1],googlegroup:[3,7],faq:[3,1],handi:5,devel:7,oneir:5,electron:0,cannot:1,"import":[5,0,1,7],veri:1,bit:5,now:1,discuss:7,hyperpsi:4,cool:1,loss:0,document:4,name:[5,1],administr:5,emb:7,did:1,list:[3,1,2,7],fernando:5,email:[3,7],"try":3,item:7,either:1,have:[3,1,7],team:7,found:3,grenobl:2,page:7,microscopi:0,pleas:[0,3],provid:0,right:5,old:1,lastest:5,laboratori:2,some:1,past:2,see:[7,0,1,6],sure:1,design:5,connect:0,instal:[5,7],download:[5,7],our:[0,7],energi:0,beyond:1,zagonel:5,special:0,univers:2,compat:5,googl:[3,7],sud:2,lead:0,eel:0,spectrum:1,open:[5,0,1],section:[0,7],req:7,particip:2,research:0,current:[5,1,4],written:5,version:[5,3,4,7,1],install_hyperspy_her:5,between:5,without:[5,3,7],"new":[0,6],"public":0,note:5,common:0,machin:0,encourag:7,run:[2,7],spring:2,lose:5,free:7,like:[1,2,7],luiz:5,extens:5,host:7,base:[3,7],here:[5,0],repositori:7,ubuntu:5,ask:[5,1],depend:7,standard:[5,0,1],sinc:1,happy_export:1,manual:5,about:7,your:[3,1,2,7],fit:0,plugin:[5,1],oxford:2,could:3,rippl:[5,1],float32:1,befor:[5,1],isn:1,context:5,chang:1,com:[3,7],think:[3,1],add:5,gatan:1,softwar:[5,1],via:1,directli:5,extra:5,feel:1,exchang:1,barcelon:2,dataset:0,releas:[5,0,6],featur:[1,7],"24th":2,been:[7,0,1,6],path:5,hyperspi:[0,3,1,5,6,7],stabl:5,guid:[0,7],assum:1,rpl:1,gpl:0,strong:7,from:7,describ:1,wai:7,"universit\u00e9":2,licens:0,support:[0,3,1],question:[3,1],system:7,least:1,mark:7,avail:7,much:1,interest:3,acknowledg:0,txt:7,scope:1,type:1,hei:1,uninstall_hyperspy_her:5,exit:5,consol:5,agre:1,tool:[1,7],suit:0,convert:1,pari:2,ani:[1,2],warn:5,digitalmicrograph:5,train:[3,2],link:5,newer:5,why:1,git:7,compani:2,bug:[5,3,7],those:7,must:5,reinstal:7,also:[3,7],account:[3,7],save:1,join:[3,7],spectroscopi:0,possibl:[1,7],"default":1,checkout:7,hdf5:[0,1],cambridg:2,cite:0,project:[0,1,7],directori:7,below:1,itself:5,can:[5,3,1,7],mai:[3,2],learn:0,"export":1,inform:7,control:7,"function":5,would:2,prompt:5,want:[5,3,1,2,7],creat:[1,7],well:[0,1,7],cea:2,year:2,customis:0,ripl:5,raw:5,pip:7,sourc:0,file:[5,0,1],cooler:1,octob:2,march:2,revis:0,work:[0,7],check:1,sever:2,probabl:1,packag:[5,1],subscrib:[3,7],vista:5,develop:[5,0,4,2,7],goal:1,equival:1,author:0,perform:0,format:[5,0,1],when:[5,1],same:5,write:[0,1],field:0,need:[3,7],other:[5,0,1],toolbox:0,best:[1,7],which:1,contain:1,answer:[3,1],easi:[5,0],you:[5,3,1,2,7],librari:5,imag:1,updat:7,analysi:[0,1],grown:1,curv:0,relat:5,extern:7,distribut:7,clone:7,after:7,june:2,multidimension:0,most:1,beta:[5,0,4,6],rais:1,user:[0,3,1,7],thi:[5,0,3,1,7],date:5,multipl:0,spy:1,data:[5,0,1],eelslab:1,welcom:7,forthcom:2,github:7,attempt:1,favourit:1,scientif:0,read:[0,1],doc:[3,1],later:5,request:7,doe:[0,1],real8:1,importrpl:[5,1],contact:2,error:1,change_dtyp:1,time:2,micrograph:[5,1],academ:0,ica:0,fact:0,float64:1},objtypes:{},titles:["Hyperspy: Hyperspectral data analysis toolbox","FAQ","Trainings","Support","Documentation","Download","News","<strong>Developer Zone</strong>"],objnames:{},filenames:["index","faq","trainings","support","documentation","download","news","developer"]})
+Search.setIndex({objects:{},terms:{all:[0,7],code:7,uninstal:5,execut:5,show:0,abl:0,hyperspectr:[0,1],move:7,find:[3,7],becaus:1,report:[3,7],calibr:5,through:2,keyword:5,follow:5,yet:[0,7],impact:0,web:[3,7],don:7,group:7,just:1,zone:7,how:0,menu:5,fix:3,activ:0,send:[3,7],should:7,better:1,window:5,bibliographi:0,requir:5,rich:0,under:0,mail:[3,1,2,7],pca:0,analys:1,transit:5,whishlist:7,bin:5,digit:[5,0,1,6],evok:1,everi:7,contribut:0,thei:7,get:5,python:[5,0,1],googlegroup:[3,7],faq:[3,1],handi:5,devel:7,oneir:5,electron:0,were:5,"import":[5,0,1,7],veri:1,bit:5,now:1,discuss:7,hyperpsi:4,cool:1,loss:0,document:4,name:[5,1],administr:5,emb:7,did:1,list:[3,1,2,7],fernando:5,email:[3,7],"try":3,item:7,either:1,have:[3,1,7],team:7,found:3,grenobl:2,page:7,microscopi:0,pleas:[0,3,1],provid:0,right:5,old:1,lastest:5,laboratori:2,past:2,see:[7,0,1,6],sure:1,design:5,connect:0,instal:[5,7],download:[5,1,7],our:[0,7],energi:0,beyond:1,zagonel:5,special:0,univers:2,compat:5,googl:[3,7],sud:2,lead:0,eel:0,spectrum:1,section:[0,7],req:7,particip:2,research:0,current:[5,1,4],written:5,version:[0,1,3,4,5,6,7],install_hyperspy_her:5,between:5,without:[5,3,7],"new":[5,0,6],"public":0,note:5,common:0,machin:0,encourag:7,run:[2,7],spring:2,lose:5,free:7,like:[1,2,7],luiz:5,extens:5,host:7,base:[3,7],here:[5,0],repositori:7,ubuntu:5,solv:5,depend:7,standard:[5,0,1],sinc:1,manual:5,about:7,your:[3,1,2,7],fit:0,plugin:[5,0,1,6],oxford:2,could:3,rippl:[5,1],befor:5,isn:1,context:5,chang:1,com:[3,7],think:[3,1],add:5,gatan:1,softwar:[5,1],via:1,directli:5,extra:5,feel:1,barcelon:2,dataset:0,ask:[5,1],featur:[5,1,7],"24th":2,path:5,hyperspi:[0,3,1,5,6,7],stabl:5,guid:[0,7],open:[5,0,1],rpl:1,gpl:0,strong:7,from:7,describ:1,wai:7,"universit\u00e9":2,licens:0,support:[0,3,1],question:[3,1],system:7,been:[7,0,1,6],mark:7,avail:7,much:1,interest:3,acknowledg:0,txt:7,scope:1,type:1,hei:1,minor:5,uninstall_hyperspy_her:5,exit:5,consol:5,agre:1,tool:[1,7],suit:0,pari:2,ani:[1,2],warn:5,digitalmicrograph:5,train:[3,2],link:5,newer:5,why:1,git:7,compani:2,bug:[5,3,7],those:7,must:5,reinstal:7,also:[3,7],account:[3,7],save:1,join:[3,7],spectroscopi:0,possibl:[1,7],"default":1,checkout:7,hdf5:[0,1],cambridg:2,cite:0,project:[0,1,7],directori:7,below:1,itself:5,can:[5,3,1,7],mai:[3,2],learn:0,"export":1,control:7,"function":5,would:2,prompt:5,want:[5,3,1,2,7],creat:[1,7],well:[0,1,7],cea:2,year:2,customis:0,ripl:5,raw:5,pip:7,sourc:0,file:[5,0,1],cooler:1,octob:2,march:2,revis:0,work:[0,7],check:1,sever:2,packag:[5,1],subscrib:[3,7],vista:5,develop:[5,0,4,2,7],goal:1,author:0,perform:0,format:[5,0,1],when:[5,1],same:5,write:[0,1],field:0,need:[3,7],other:[5,0,1],toolbox:0,best:7,which:1,answer:[3,1],easi:[5,0],you:[5,3,1,2,7],librari:5,imag:1,updat:7,analysi:[0,1],grown:1,curv:0,relat:5,extern:7,distribut:7,clone:7,after:7,june:2,multidimension:0,most:1,beta:[5,0,4,6],releas:[5,0,6],user:[0,3,1,7],date:5,multipl:0,spy:1,data:[5,0,1],eelslab:1,welcom:7,forthcom:2,github:7,attempt:1,favourit:1,scientif:0,read:[0,1],doc:[3,1],later:5,request:7,rais:1,doe:[0,1],inform:7,importrpl:[5,0,1,6],contact:2,error:1,thi:[5,0,3,7],time:2,micrograph:[5,0,1,6],academ:0,ica:0,fact:0,latest:1},objtypes:{},titles:["Hyperspy: Hyperspectral data analysis toolbox","FAQ","Trainings","Support","Documentation","Download","News","<strong>Developer Zone</strong>"],objnames:{},filenames:["index","faq","trainings","support","documentation","download","news","developer"]})
