@@ -1,5 +1,6 @@
 News
 ====
+* ``12/06/2012`` A new version of ImportRPL has been released. See :ref:`import-rpl`
 * ``16/04/2012`` Hyperspy 0.4.1  has been released! See :ref:`beta-releases`
 * ``29/02/2012`` Hyperspy 0.4  has been released! See :ref:`beta-releases`
 
